<resources>
    <string name="app_name">Verify your phone number</string>
    <string name="action_settings">Settings</string>
    <string name="message">This App will send you an SMS message to verify your phone number. Kindly enter your phone Number</string>
    <string name="enter_phone_hint">Enter Phone Number</string>
    <string name="start_phone_auth">Start Verification</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="enter_verify_code">Enter SMS Code</string>
    <string name="success_message">You have successfully Logged in</string>
</resources>
